--- a/openApiDocs/v1.0/DeviceManagement.Enrollment.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Enrollment.yml
@@ -184,11 +184,11 @@ paths:
     post:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Create deviceEnrollmentPlatformRestrictionsConfiguration
-      description: Create a new deviceEnrollmentPlatformRestrictionsConfiguration object.
+      summary: Create deviceEnrollmentWindowsHelloForBusinessConfiguration
+      description: Create a new deviceEnrollmentWindowsHelloForBusinessConfiguration object.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentplatformrestrictionsconfiguration-create?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentwindowshelloforbusinessconfiguration-create?view=graph-rest-1.0
       operationId: deviceManagement_CreateDeviceEnrollmentConfiguration
       requestBody:
         description: New navigation property
@@ -306,11 +306,11 @@ paths:
     delete:
       tags:
         - deviceManagement.deviceEnrollmentConfiguration
-      summary: Delete deviceEnrollmentPlatformRestrictionsConfiguration
-      description: Deletes a deviceEnrollmentPlatformRestrictionsConfiguration.
+      summary: Delete deviceEnrollmentWindowsHelloForBusinessConfiguration
+      description: Deletes a deviceEnrollmentWindowsHelloForBusinessConfiguration.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentplatformrestrictionsconfiguration-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/intune-onboarding-deviceenrollmentwindowshelloforbusinessconfiguration-delete?view=graph-rest-1.0
       operationId: deviceManagement_DeleteDeviceEnrollmentConfiguration
       parameters:
         - name: deviceEnrollmentConfiguration-id
@@ -1947,6 +1947,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
@@ -1995,7 +1996,7 @@ components:
               nullable: true
             type:
               type: string
-              description: 'Describes the type of app-specific resource represented by the app scope. Provided for display purposes, so a user interface can convey to the user the kind of app specific resource represented by the app scope. Read-only.'
+              description: 'Describes the type of app-specific resource represented by the app scope and is provided for display purposes, so a user interface can convey to the user the kind of app specific resource represented by the app scope. Read-only.'
               nullable: true
           additionalProperties:
             type: object
