Added xml help files to nuspec file instead of csproj

--- a/src/Authentication/Authentication/Microsoft.Graph.Authentication.nuspec
+++ b/src/Authentication/Authentication/Microsoft.Graph.Authentication.nuspec
@@ -22,6 +22,8 @@
     <file src="artifacts\Microsoft.Graph.Authentication.psd1" />
     <file src="artifacts\Microsoft.Graph.Authentication.dll" />
     <file src="artifacts\Microsoft.Graph.Authentication.Core.dll" />
+    <file src="artifacts\Microsoft.Graph.Authentication.dll-Help.xml" />
+    <file src="artifacts\Microsoft.Graph.Authentication-help.xml" />
     <file src="artifacts\StartupScripts\" target="StartupScripts" />
     <file src="artifacts\custom\" target="custom" />
     <!-- Copy framework dependent assemblies to respective framework directory. -->
