--- a/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
@@ -2572,7 +2572,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.keyValuePair'
-              description: Additional details about service event. This property doesn't support filters.
+              description: More details about service event. This property doesn't support filters.
             endDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -2785,6 +2785,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
